<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@color/Azul1"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:padding="3dp"
        android:layout_marginBottom="20dp"
        android:text="@string/tvTitulo"/>

    <TextView
        android:id="@+id/tvDactilar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/Azul3"
        android:text="@string/tvDactilar"
        android:padding="3dp"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/tvCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/Azul4"
        android:padding="3dp"
        android:text="@string/tvCamera"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvSMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/Azul3"
        android:padding="3dp"
        android:text="@string/tvSMS"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/Azul4"
        android:padding="3dp"
        android:text="@string/tvCall"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvMicrophone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/Azul3"
        android:padding="3dp"
        android:text="@string/tvMicrophone"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:padding="3dp"
        android:background="@color/Azul4"
        android:text="@string/tvInternet"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvContactos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:background="@color/Azul3"
        android:padding="3dp"
        android:text="@string/tvContactos"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnCheckPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:textSize="18dp"
        android:backgroundTint="@color/Azul1"
        android:text="@string/btnCheckPermission" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textSize="18dp"
        android:layout_marginVertical="10dp"
        android:text="@string/tvSeleccione"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginVertical="5dp">
            <Button
                android:id="@+id/btnFingerPint"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:textSize="18dp"
                android:backgroundTint="@color/Azul1"
                android:textColor="@color/white"
                android:text="@string/btnRequestFingerPint" />
            <Button
                android:id="@+id/btnCamera"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:textSize="18dp"
                android:backgroundTint="@color/Azul3"
                android:textColor="@color/white"
                android:text="@string/btnRequestCamera" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginVertical="5dp">
        <Button
            android:id="@+id/btnSMS"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:textSize="18dp"
            android:backgroundTint="@color/Azul3"
            android:textColor="@color/white"
            android:text="@string/btnRequestSMS" />
        <Button
            android:id="@+id/btnCall"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:textSize="18dp"
            android:backgroundTint="@color/Azul1"
            android:textColor="@color/white"
            android:text="@string/btnRequestCall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginVertical="5dp">
        <Button
            android:id="@+id/btnMicrophone"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:textSize="18dp"
            android:backgroundTint="@color/Azul1"
            android:textColor="@color/white"
            android:text="@string/btnRequestMicrophone" />
        <Button
            android:id="@+id/btnInternet"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:textSize="18dp"
            android:backgroundTint="@color/Azul3"
            android:textColor="@color/white"
            android:text="@string/btnRequestInternet" />
    </LinearLayout>

    <Button
        android:id="@+id/btnContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:textSize="18dp"
        android:backgroundTint="@color/Azul1"
        android:textColor="@color/white"
        android:text="@string/btnRequestContacts" />

</LinearLayout>